# wireloft

./: .aiignore  .gitignore  Dockerfile  FIX-HTTP-TIMEOUT.md  README.md  docker-compose.yml  pyproject.toml
backend/: __main__.py  app.py
config/: config.yml.default  cookies.txt.default
cron.d/: dailywire.cron.template
dailywire_api/: __init__.py  __main__.py  app.py  client.py  config.py
dailywire_api/middleware/: client.py
dailywire_api/records/: BaseRecord.py  EpisodeRecord.py  SeasonRecord.py  ShowRecord.py  ThumbnailRecord.py  __init__.py
dailywire_api/utils/: alias.py
dailywire_downloader/: __init__.py  __main__.py  cli.py  download.py  downloader.py  nfo.py
frontend/: index.html  package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/public/static/js/: .gitkeep  bundle.js
frontend/src/: App.jsx  api.js  index.jsx  styles.css
frontend/src/components/: Overview.jsx  ShowEditor.jsx  Sidebar.jsx  Sources.jsx
scripts/: create_nfo.py  create_nfo.sh  cron_wrapper.sh  download.py  download.sh  entrypoint.sh  run_frontend_dev.sh  run_gunicorn.sh
tests/: __init__.py  test_imports.py
ui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: AddMediaProfile.tsx  AddShow.tsx  Dashboard.tsx  EditMediaProfile.tsx  EditShow.tsx  Home.tsx  MediaProfileForm.tsx  MediaProfiles.tsx  Settings.tsx  Show.tsx  ShowForm.tsx  Sidebar.tsx
ui/src/components/MediaProfileForm/: index.d.ts  index.js
ui/src/components/ShowForm/: ShowForm.tsx  index.d.ts  index.js
ui/src/components/Sidebar/: Sidebar.tsx
ui/src/domain/: show.ts
ui/src/lib/: cache.ts  queries.ts  queryClient.ts
ui/src/pages/: HomePage.tsx  MediaProfilesPage.tsx  SettingsPage.tsx
ui/src/pages/episode/: EpisodePage.tsx
ui/src/pages/media-profile/: AddMediaProfilePage.tsx  EditMediaProfilePage.tsx
ui/src/pages/show/: AddShowPage.tsx  EditShowPage.tsx  ShowPage.tsx
ui/src/utils/: ReadMore.tsx  TimeInterval.tsx  showStatus.ts
wireloft_web/: app.py
