[tool.poetry]
name = "wireloft"
version = "0.1.0"
description = "Wireloft - manage and download DailyWire shows"
authors = ["Samuël Visser <samuvisser@gmail.com>"]
packages = [
    {include = "dailywire_downloader"},
    {include = "wireloft_web"}
]

[tool.poetry.dependencies]
python = "~3.13"
pyyaml = "^6.0"
yt-dlp = { git = "https://github.com/yt-dlp/yt-dlp.git", rev = "311bb3b" }
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
dailywire-downloader = "dailywire_downloader.__main__:main"
wireloft-api = "wireloft_web.app:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"