[tool.poetry]
name = "wireloft"
version = "0.2.0"
description = "A tool to download premium shows and movies from the DailyWire website"
authors = ["Samuël Visser <samuvisser@gmail.com>"]
packages = [{include = "dailywire_downloader"}]

[tool.poetry.dependencies]
python = "~3.13"
pyyaml = "^6.0"
yt-dlp = { git = "https://github.com/yt-dlp/yt-dlp.git", rev = "311bb3b" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
dailywire-downloader = "dailywire_downloader.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"